// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkCalendarDate cellType tests should render a disabled button 1`] = `
<DocumentFragment>
  <button
    aria-hidden="false"
    aria-label="15"
    aria-pressed="false"
    class="bpk-calendar-date bpk-calendar-date--colored bpk-calendar-date--colored-default"
    disabled=""
    tabindex="-1"
    type="button"
  >
    <span
      aria-hidden="true"
    >
      15
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkCalendarDate cellType tests should render a focused button with tabIndex 1`] = `
<DocumentFragment>
  <button
    aria-hidden="false"
    aria-label="15"
    aria-pressed="false"
    class="bpk-calendar-date bpk-calendar-date--colored bpk-calendar-date--colored-default bpk-calendar-date--focused"
    tabindex="0"
    type="button"
  >
    <span
      aria-hidden="true"
    >
      15
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkCalendarDate cellType tests should render correctly with default style 1`] = `
<DocumentFragment>
  <button
    aria-hidden="false"
    aria-label="15"
    aria-pressed="false"
    class="bpk-calendar-date bpk-calendar-date--colored bpk-calendar-date--colored-default"
    tabindex="-1"
    type="button"
  >
    <span
      aria-hidden="true"
    >
      15
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkCalendarDate cellType tests should render correctly with negative style 1`] = `
<DocumentFragment>
  <button
    aria-hidden="false"
    aria-label="15"
    aria-pressed="false"
    class="bpk-calendar-date bpk-calendar-date--colored bpk-calendar-date--colored-negative"
    tabindex="-1"
    type="button"
  >
    <span
      aria-hidden="true"
    >
      15
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkCalendarDate cellType tests should render correctly with neutral style 1`] = `
<DocumentFragment>
  <button
    aria-hidden="false"
    aria-label="15"
    aria-pressed="false"
    class="bpk-calendar-date bpk-calendar-date--colored bpk-calendar-date--colored-neutral"
    tabindex="-1"
    type="button"
  >
    <span
      aria-hidden="true"
    >
      15
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkCalendarDate cellType tests should render correctly with positive style 1`] = `
<DocumentFragment>
  <button
    aria-hidden="false"
    aria-label="15"
    aria-pressed="false"
    class="bpk-calendar-date bpk-calendar-date--colored bpk-calendar-date--colored-positive"
    tabindex="-1"
    type="button"
  >
    <span
      aria-hidden="true"
    >
      15
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkCalendarDate should pass props through to button 1`] = `
<DocumentFragment>
  <button
    aria-hidden="false"
    aria-label="Nothing happened on this day in 2010"
    aria-pressed="false"
    class="bpk-calendar-date"
    tabindex="-1"
    type="button"
  >
    <span
      aria-hidden="true"
    >
      15
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkCalendarDate should render a blocked button as disabled with aria-hidden applied 1`] = `
<DocumentFragment>
  <button
    aria-hidden="true"
    aria-label="15"
    aria-pressed="false"
    class="bpk-calendar-date bpk-calendar-date--blocked"
    disabled=""
    tabindex="-1"
    type="button"
  >
    <span
      aria-hidden="true"
    >
      15
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkCalendarDate should render a disabled button 1`] = `
<DocumentFragment>
  <button
    aria-hidden="false"
    aria-label="15"
    aria-pressed="false"
    class="bpk-calendar-date"
    disabled=""
    tabindex="-1"
    type="button"
  >
    <span
      aria-hidden="true"
    >
      15
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkCalendarDate should render a focused button with tabIndex 1`] = `
<DocumentFragment>
  <button
    aria-hidden="false"
    aria-label="15"
    aria-pressed="false"
    class="bpk-calendar-date bpk-calendar-date--focused"
    tabindex="0"
    type="button"
  >
    <span
      aria-hidden="true"
    >
      15
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkCalendarDate should render correctly 1`] = `
<DocumentFragment>
  <button
    aria-hidden="false"
    aria-label="15"
    aria-pressed="false"
    class="bpk-calendar-date"
    tabindex="-1"
    type="button"
  >
    <span
      aria-hidden="true"
    >
      15
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkCalendarDate should render with a click and keyDown handler 1`] = `
<DocumentFragment>
  <button
    aria-hidden="false"
    aria-label="15"
    aria-pressed="false"
    class="bpk-calendar-date"
    tabindex="-1"
    type="button"
  >
    <span
      aria-hidden="true"
    >
      15
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkCalendarDate should set a custom class 1`] = `
<DocumentFragment>
  <button
    aria-hidden="false"
    aria-label="15"
    aria-pressed="false"
    class="bpk-calendar-date userlandClassName"
    tabindex="-1"
    type="button"
  >
    <span
      aria-hidden="true"
    >
      15
    </span>
  </button>
</DocumentFragment>
`;
